Form content structure of index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
   <title>World Capitals Quiz</title>
 </head>
 <body>
+  <main>
+    <div class="panel">
+      <a href="index.html" id="home-button"><i class="fas fa-home"></i></a>
+      <h1>World Capitals Quiz</h1>
+      <p>Welcome to the Capitals of the World Quiz!</p>
+      
+      <div id="game-area">
+        <button>Play</button>
+        <button>Rules</button>
+        <button>Scores</button>
+      </div>
+      <span class="line"></span>
+     
+      <ul class="social-media">
+        <li>
+        </li>
+        <li></li>
+        </li>
+        <li>
+        </li>
+        <li>
+        </li>
+      </ul>
+    <div>
+  </main>
 
   <script src="assets/js/script.js"></script>
 </body>
