--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <p>Welcome to the Capitals of the World Quiz!</p>
       
       <div id="game-area">
-        <button>Play</button>
-        <button>Rules</button>
-        <button>Scores</button>
+        <button class="menu-btn btn">Play</button>
+        <button class="menu-btn btn">Rules</button>
+        <button class="menu-btn btn">Scores</button>
       </div>
       <span class="line"></span>
      
