Add social media icons with links to external pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>World Capitals Quiz</title>
 </head>
 <body>
+  
   <main>
     <div class="panel">
       <a href="index.html" id="home-button"><i class="fas fa-home"></i></a>
@@ -25,12 +26,24 @@
      
       <ul class="social-media">
         <li>
-        </li>
-        <li></li>
+          <a href="https://facebook.com" target="_blank" rel="noopener"
+          aria-label="Clicking this link will take you to our facebook page (link opens in new tab)">
+          <i class="fab fa-facebook"></i></a>
         </li>
         <li>
+          <a href="https://instagram.com" target="_blank" rel="noopener"
+          aria-label="Clicking this link will take you to our istagram page (link opens in new tab)">
+          <i class="fab fa-instagram"></i></a>
         </li>
         <li>
+          <a href="https://twitter.com" target="_blank" rel="noopener"
+          aria-label="Clicking this link will take you to our twitter page (link opens in new tab)">
+          <i class="fab fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="https://youtube.com" target="_blank" rel="noopener"
+          aria-label="Clicking this link will take you to our facebook page youtube page (link opens in new tab)">
+          <i class="fab fa-youtube"></i></a>
         </li>
       </ul>
     <div>
