--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
   <!-- Css stylesheet and font awesome script -->
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://kit.fontawesome.com/132ee46fd9.js" crossorigin="anonymous"></script>
-  <title>World Capitals Quiz</title>
+  <title>Capitals of the World Quiz</title>
 </head>
 <body>
-  
+
   <main>
     <div class="panel">
-      <a href="index.html" id="home-button"><i class="fas fa-home"></i></a>
-      <h1>World Capitals Quiz</h1>
-      <p>Welcome to the Capitals of the World Quiz!</p>
-      
+      <div class="title-bar">
+        <a href="index.html" id="home-button"><i class="fas fa-home"></i></a>
+        <h1>Capitals of the World Quiz</h1>
+        <span id="sound-icon"><i class="fas fa-volume-up"></i></span>
+      </div>
+        
       <div id="game-area">
+        <h2>Welcome to the Capitals of the World Quiz!</h2>
         <button class="menu-btn btn">Play</button>
         <button class="menu-btn btn">Rules</button>
         <button class="menu-btn btn">Scores</button>
