Build the username input page accessed by the main menu play button

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         
       <div id="game-area">
         <h2>Welcome to the Capitals of the World Quiz!</h2>
-        <button class="menu-btn btn">Play</button>
-        <button class="menu-btn btn">Rules</button>
-        <button class="menu-btn btn">Scores</button>
+        <div class="menu-btn-container">  
+          <button class="menu-btn btn">Play</button>
+          <button class="menu-btn btn">Rules</button>
+          <button class="menu-btn btn">Scores</button>
+        </div>
       </div>
       <span class="line"></span>
      
