--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     <div>
   </main>
 
+  <!-- JavaScript scripts -->
   <script src="assets/js/script.js"></script>
+  <script src="assets/js/questions.js"></script>
 </body>
 </html>
