Add sound effects to buttons and answers with toggle to switch on and off

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="title-bar">
         <a href="index.html" id="home-button"><i class="fas fa-home"></i></a>
         <h1>Capitals of the World Quiz</h1>
-        <span id="sound-icon"><i class="fas fa-volume-up"></i></span>
+        <span id="sound-icon"></i></span>
       </div>
         
       <div id="game-area">
@@ -57,5 +57,6 @@
   <!-- JavaScript scripts -->
   <script src="assets/js/script.js"></script>
   <script src="assets/js/questions.js"></script>
+  <script src="assets/js/sounds.js"></script>
 </body>
 </html>
