Add high score tracking to game

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="title-bar">
         <a href="index.html" id="home-button"><i class="fas fa-home"></i></a>
         <h1>Capitals of the World Quiz</h1>
-        <span id="sound-icon"></i></span>
+        <span id="sound-icon"><i class="fas fa-volume-up"></i></i></span>
       </div>
         
       <div id="game-area">
