Add end of quiz modal to game

--- a/index.html
+++ b/index.html
@@ -52,11 +52,17 @@
         </li>
       </ul>
     <div>
+
+    <div id="modal"> 
+      <h3 id="modalTitle"></h3>
+      <div id="modalContent"></div>
+    </div>
   </main>
 
   <!-- JavaScript scripts -->
   <script src="assets/js/script.js"></script>
   <script src="assets/js/questions.js"></script>
   <script src="assets/js/sounds.js"></script>
+  <script src="assets/js/modals.js"></script>
 </body>
 </html>
