Add confirmation modal when the user is in the game area and clicks the home icon

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <main>
     <div class="panel">
       <div class="title-bar">
-        <a href="index.html" id="home-button"><i class="fas fa-home"></i></a>
+        <span id="home-button"><i class="fas fa-home"></i></span>
         <h1>Capitals of the World Quiz</h1>
-        <span id="sound-icon"><i class="fas fa-volume-up"></i></i></span>
+        <span id="sound-icon"><i class="fas fa-volume-up"></i></span>
       </div>
         
       <div id="game-area">
