--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="title-bar">
         <span id="home-button"><i class="fas fa-home"></i></span>
         <h1>Capitals of the World Quiz</h1>
-        <span id="sound-icon"><i class="fas fa-volume-up"></i></span>
+        <span id="sound-icon"></span>
       </div>
         
       <div id="game-area">
