Add responsive design to the main menu

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
   <main>
     <div class="panel">
       <div class="title-bar">
-        <span id="home-button"><i class="fas fa-home"></i></span>
+        <div id="icon-div">
+          <span id="home-button"><i class="fas fa-home"></i></span>
+          <span id="sound-icon"></span>
+        </div>
         <h1>Capitals of the World Quiz</h1>
-        <span id="sound-icon"></span>
       </div>
         
       <div id="game-area">
-        <h2>Welcome to the Capitals of the World Quiz!</h2>
+        <h2>Welcome to the Capitals of the World Quiz! Test your knowledge of the capital cities of the world...</h2>
         <div class="menu-btn-container">  
           <button class="menu-btn btn">Play</button>
           <button class="menu-btn btn">Rules</button>
