--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <span id="home-button"><i class="fas fa-home"></i></span>
           <span id="sound-icon"></span>
         </div>
-        <h1>Capitals of the World Quiz</h1>
+        <h1>The World Capitals Quiz</h1>
       </div>
         
       <div id="game-area">
