--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <i class="fab fa-youtube"></i></a>
         </li>
       </ul>
-    <div>
+    </div>
 
     <div id="modal"> 
       <h3 id="modalTitle"></h3>
