--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="The capitals of the world quiz is a geography based game where players can test their knowledge">
+  <meta name="keywords" content="game, capitals, geography quiz, world capitals, geography game">
   <!-- Css stylesheet and font awesome script -->
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://kit.fontawesome.com/132ee46fd9.js" crossorigin="anonymous"></script>
