--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The capitals of the world quiz is a geography based game where players can test their knowledge">
   <meta name="keywords" content="game, capitals, geography quiz, world capitals, geography game">
-  <link rel="shortcut icon" href="#">
+  <link rel="shortcut icon" href="favicon.ico">
 
   <!-- Css stylesheet and font awesome script -->
   <link rel="stylesheet" href="assets/css/style.css">
