Clean up code and clarify comments on all files

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </li>
         <li>
           <a href="https://instagram.com" target="_blank" rel="noopener"
-          aria-label="Clicking this link will take you to our istagram page (link opens in new tab)">
+          aria-label="Clicking this link will take you to our instagram page (link opens in new tab)">
           <i class="fab fa-instagram"></i></a>
         </li>
         <li>
@@ -53,7 +53,7 @@
         </li>
         <li>
           <a href="https://youtube.com" target="_blank" rel="noopener"
-          aria-label="Clicking this link will take you to our facebook page youtube page (link opens in new tab)">
+          aria-label="Clicking this link will take you to our youtube page (link opens in new tab)">
           <i class="fab fa-youtube"></i></a>
         </li>
       </ul>
